--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -3,7 +3,7 @@
   border-radius: 50%;
 }
 .avatar-large {
-  width: 50px;
+  width: 80px;
   border-radius: 50%;
 }
 .avatar-bordered {
@@ -18,3 +18,10 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+.avatar-small {
+  border-radius: 50%;
+  height: 60px;
+  width: 60px;
+}
+
