--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -2,9 +2,9 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500|Lobster");
 $base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Raleway", "Helvetica", "sans-serif";
+$header-font: "Lobster", "cursive";
 
 // Local fonts (uncomment following lines)
 // @font-face {
@@ -31,6 +31,8 @@ $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
+$white: #FFFFFF;
+$light-grey: #F4F4F4;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
