--- a/source/stylesheets/config/_bootstrap_variables.css.scss
+++ b/source/stylesheets/config/_bootstrap_variables.css.scss
@@ -14,7 +14,7 @@ $headings-font-family:    $header-font;
 $brand-primary:   $blue;
 $brand-success:   $green;
 $brand-info:      $yellow;
-$brand-danger:    $red;
+$brand-danger:    #EE5F5B;
 $brand-warning:   $orange;
 
 // Buttons / inputs radius
