--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -27,6 +27,7 @@ $base-height: 1.4;
 $brand-color: #D23333;
 
 $red: #EE5F5B;
+$darker-red: #E9322D;
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
