--- a/source/stylesheets/layout/_footer.css.scss
+++ b/source/stylesheets/layout/_footer.css.scss
@@ -6,21 +6,17 @@
   display: flex;
   justify-content: left;
   align-items: center;
-}
-
-#footer ul {
-  margin: 0;
-  flex: 0 0 auto;
-}
-
-
-#footer a {
-  color: black;
-  font-size: 30px;
-  margin: 0 20px;
-  transition: all 0.2s ease;
-}
-
-#footer a:hover {
-  color: white;
+  ul {
+    margin: 0;
+    flex: 0 0 auto;
+  }
+  a {
+    color: black;
+    font-size: 30px;
+    margin: 0 20px;
+    transition: all 0.2s ease;
+    &:hover {
+    color: white;
+    }
+  }
 }
