--- a/source/stylesheets/layout/_navbar.css.scss
+++ b/source/stylesheets/layout/_navbar.css.scss
@@ -22,6 +22,10 @@
 /* Navbar logo */
 .navbar-wagon-brand img {
   width: 50px;
+  opacity: 0.5;
+  &:hover {
+  opacity: 1;
+  }
 }
 
 /* Navbar right section (with form, links, button) */
@@ -54,15 +58,15 @@
   padding: 0 20px;
   border-radius: 20em;
   line-height: 40px;
-  background-color: #D23333;
+  background-color: $red;
   color: white;
   font-size: 14px;
-  border: 2px solid #D23333;
+  border: 2px solid $red;
 }
 .navbar-wagon-button:hover {
   color: white;
-  background: #D23333;
-  border-color: #ac2626;
+  background: $darker-red;
+  border-color: $darker-red;
 }
 
 /* Navbar search form */
