Adjusting avatar size

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -69,7 +69,7 @@ title: London Rooftop Home
       <div class="col-xs-12 col-md-6">
         <div class="card" style="background-image: linear-gradient(20deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.2) 65%), url('images/seb-rooftop.jpg');">
           <a href="#" class="card-link"></a>
-          <img class="card-owner avatar-small" src="images/avatar.jpg" alt="Profile picture" class="avatar-small">
+          <img class="card-owner avatar-small" src="images/seb.jpg" alt="Profile picture" class="avatar-small">
           <div class="card-location">Shoreditch</div>
           <div class="card-info">
             <h2>Ruby</h2>
