Updating image filepaths and card-link paths. Need to change rooftop cards to be dynamic - use iterations

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -68,7 +68,7 @@ title: London Rooftop Home
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <div class="card" style="background-image: linear-gradient(20deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.2) 65%), url('images/seb-rooftop.jpg');">
-          <a href="#" class="card-link"></a>
+          <a href="/rooftops/ruby.html" class="card-link"></a>
           <img class="card-owner avatar-small" src="images/seb.jpg" alt="Profile picture" class="avatar-small">
           <div class="card-location">Shoreditch</div>
           <div class="card-info">
@@ -79,7 +79,7 @@ title: London Rooftop Home
       </div>
       <div class="col-xs-12 col-md-6">
         <div class="card" style="background-image: linear-gradient(20deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.2) 65%), url('images/romain-rooftop.jpg');">
-          <a href="#" class="card-link"></a>
+          <a href="/rooftops/le_Wagon.html" class="card-link"></a>
           <img class="card-owner avatar-small" src="images/romain.jpg" alt="Profile picture" class="avatar-small">
           <div class="card-location">Shoreditch</div>
           <div class="card-info">
@@ -90,7 +90,7 @@ title: London Rooftop Home
       </div>
       <div class="col-xs-12 col-md-6">
         <div class="card" style="background-image: linear-gradient(20deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.2) 65%), url('images/boris-rooftop.jpg');">
-          <a href="#" class="card-link"></a>
+          <a href="/rooftops/snails_delight.html" class="card-link"></a>
           <img class="card-owner avatar-small" src="images/boris.jpg" alt="Profile picture" class="avatar-small">
           <div class="card-location">Canary Wharf</div>
           <div class="card-info">
@@ -100,9 +100,9 @@ title: London Rooftop Home
         </div>
       </div>
       <div class="col-xs-12 col-md-6">
-        <div class="card" style="background-image: linear-gradient(20deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.2) 65%), url('images/ed-rooftop.jpg');">
-          <a href="#" class="card-link"></a>
-          <img class="card-owner avatar-small" src="images/ed-ward.jpg" alt="Profile picture" class="avatar-small">
+        <div class="card" style="background-image: linear-gradient(20deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.2) 65%), url('images/edward-rooftop.jpg');">
+          <a href="/rooftops/afrikaans_adventure" class="card-link"></a>
+          <img class="card-owner avatar-small" src="images/edward.jpg" alt="Profile picture" class="avatar-small">
           <div class="card-location">Botswana</div>
           <div class="card-info">
             <h2>Afrikaans Adventure</h2>
