Updating card-links

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -68,7 +68,7 @@ title: London Rooftop Home
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <div class="card" style="background-image: linear-gradient(20deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.2) 65%), url('images/seb-rooftop.jpg');">
-          <a href="/rooftops/ruby.html" class="card-link"></a>
+          <a href="/rooftops/ruby" class="card-link"></a>
           <img class="card-owner avatar-small" src="images/seb.jpg" alt="Profile picture" class="avatar-small">
           <div class="card-location">Shoreditch</div>
           <div class="card-info">
@@ -79,7 +79,7 @@ title: London Rooftop Home
       </div>
       <div class="col-xs-12 col-md-6">
         <div class="card" style="background-image: linear-gradient(20deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.2) 65%), url('images/romain-rooftop.jpg');">
-          <a href="/rooftops/le_Wagon.html" class="card-link"></a>
+          <a href="/rooftops/le_wagon" class="card-link"></a>
           <img class="card-owner avatar-small" src="images/romain.jpg" alt="Profile picture" class="avatar-small">
           <div class="card-location">Shoreditch</div>
           <div class="card-info">
@@ -90,7 +90,7 @@ title: London Rooftop Home
       </div>
       <div class="col-xs-12 col-md-6">
         <div class="card" style="background-image: linear-gradient(20deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.2) 65%), url('images/boris-rooftop.jpg');">
-          <a href="/rooftops/snails_delight.html" class="card-link"></a>
+          <a href="/rooftops/snails_delight" class="card-link"></a>
           <img class="card-owner avatar-small" src="images/boris.jpg" alt="Profile picture" class="avatar-small">
           <div class="card-location">Canary Wharf</div>
           <div class="card-info">
